[gd_scene load_steps=28 format=3 uid="uid://dulcf8h1hbabn"]

[ext_resource type="Script" path="res://adventure/scripts/character.gd" id="1_0ax45"]
[ext_resource type="Texture2D" uid="uid://cbmrkxk1xa53j" path="res://adventure/sprites/leather_hand2.png" id="2_1cqtu"]
[ext_resource type="PackedScene" path="res://adventure/components/comp_health.tscn" id="2_uc7ae"]
[ext_resource type="PackedScene" path="res://adventure/components/comp_sanity.tscn" id="3_ry7vy"]
[ext_resource type="Texture2D" uid="uid://dyeih6h3xvi14" path="res://adventure/sprites/rizzard2.png" id="3_u1jc7"]
[ext_resource type="PackedScene" uid="uid://bqu1gwna33sb2" path="res://adventure/components/CompPlayerInteraction.tscn" id="4_17uh0"]
[ext_resource type="Texture2D" uid="uid://bn0y75m3ddgd1" path="res://adventure/sprites/Leather_hand_axe.png" id="5_yqv2i"]
[ext_resource type="Script" path="res://adventure/scripts/tool_manager.gd" id="8_yvhg5"]
[ext_resource type="PackedScene" uid="uid://dabgqjb4drvnm" path="res://adventure/objects/tools/axe.tscn" id="9_5bi5l"]
[ext_resource type="PackedScene" uid="uid://bt3v82tnr4ar8" path="res://adventure/objects/tools/pickaxe.tscn" id="10_mdbs7"]
[ext_resource type="Script" path="res://adventure/scripts/PlayerStateMachine/player_state_machine.gd" id="11_vvgyi"]
[ext_resource type="Script" path="res://adventure/scripts/PlayerStateMachine/walk.gd" id="12_o420w"]
[ext_resource type="Script" path="res://adventure/scripts/PlayerStateMachine/idle.gd" id="13_u1ykg"]
[ext_resource type="Script" path="res://adventure/scripts/PlayerStateMachine/gather.gd" id="14_748to"]
[ext_resource type="Script" path="res://adventure/scripts/PlayerStateMachine/swing.gd" id="15_8sypp"]
[ext_resource type="Script" path="res://adventure/scripts/PlayerStateMachine/change_item.gd" id="16_rml2b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gx2d2"]
radius = 8.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3e8mx"]
polygon = PackedVector2Array(6, -10, 9, -7, 12, -4, 11, 2, 11, 6, 9, 8, 7, 10, 4, 11, 2, 11, 0, 11, -3, 10, -5, 11, -7, 9, -9, 7, -11, 4, -11, 2, -10, 1, -8, 0, -8, -1, -9, -2, -8, -4, -9, -7, -7, -9, -6, -10, -5, -11, -3, -11, -2, -11, 2, -12, 4, -11)

[sub_resource type="Gradient" id="Gradient_i7ulp"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.62987, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_caqlq"]
gradient = SubResource("Gradient_i7ulp")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_xlr86"]
resource_name = "Take_item"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 8), Vector2(5, 8), Vector2(0, 1), Vector2(3, 11), Vector2(15, 18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 4.43828),
"update": 0,
"values": [1.5708, 1.5708]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ToolManager")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_item_scene"
}]
}

[sub_resource type="Animation" id="Animation_2fpro"]
resource_name = "choping"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 8), Vector2(5, 8), Vector2(0, 1), Vector2(3, 11), Vector2(15, 18), Vector2(27, 11), Vector2(15, 18), Vector2(27, 11), Vector2(15, 18), Vector2(27, 11), Vector2(15, 18), Vector2(27, 11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHand:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_1cqtu"), ExtResource("5_yqv2i"), ExtResource("2_1cqtu")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightHand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5),
"transitions": PackedFloat32Array(1, 4.59479, 3.13834, 6.06286, 2, 4.5948, 1.62451, 6.06286, 2),
"update": 0,
"values": [1.5708, 1.5708, 0.0, 1.5708, 0.0, 1.5708, 0.0, 1.5708, 0.0]
}

[sub_resource type="Animation" id="Animation_j2khf"]
resource_name = "gathering"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 1, 1.3, 1.5, 1.8, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, -8), Vector2(17, -4), Vector2(17, -3), Vector2(17, -4), Vector2(17, -3), Vector2(17, -4), Vector2(17, -3), Vector2(17, -4), Vector2(16, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 1, 1.3, 1.5, 1.8, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 9), Vector2(17, 5), Vector2(17, 4), Vector2(17, 5), Vector2(17, 4), Vector2(17, 5), Vector2(17, 4), Vector2(17, 5), Vector2(16, 9)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CompPlayerInteraction")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"interacted"
}]
}

[sub_resource type="Animation" id="Animation_kuk7j"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(14, -9), Vector2(13, -9), Vector2(14, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(14, 10), Vector2(13, 10), Vector2(14, 10)]
}

[sub_resource type="Animation" id="Animation_b8gik"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(15, -9), Vector2(4, -9), Vector2(15, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, 10), Vector2(15, 10), Vector2(5, 10)]
}

[sub_resource type="Animation" id="Animation_w6516"]
resource_name = "swing"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 17), Vector2(15, 18), Vector2(27, 11), Vector2(15, 18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 4.59479, 3.13834, 6.06286),
"update": 0,
"values": [1.5708, 1.5708, 0.0, 1.5708]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ToolManager")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"change_item_activation"
}, {
"args": [false],
"method": &"change_item_activation"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8jga"]
_data = {
"Take_item": SubResource("Animation_xlr86"),
"choping": SubResource("Animation_2fpro"),
"gathering": SubResource("Animation_j2khf"),
"idle": SubResource("Animation_kuk7j"),
"move": SubResource("Animation_b8gik"),
"swing": SubResource("Animation_w6516")
}

[node name="Wizard" type="CharacterBody2D"]
z_index = 2
motion_mode = 1
script = ExtResource("1_0ax45")

[node name="CompHealth" parent="." instance=ExtResource("2_uc7ae")]
max_hp = 4

[node name="CompSanity" parent="." instance=ExtResource("3_ry7vy")]

[node name="CompPlayerInteraction" parent="." instance=ExtResource("4_17uh0")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gx2d2")

[node name="RightHand" type="Sprite2D" parent="."]
position = Vector2(14.3333, 10)
rotation = 1.5708
texture = ExtResource("2_1cqtu")

[node name="LeftHand" type="Sprite2D" parent="."]
position = Vector2(4.73333, -9)
rotation = 1.5708
scale = Vector2(-1, 1)
texture = ExtResource("2_1cqtu")

[node name="Rizzard" type="Sprite2D" parent="."]
light_mask = 2
texture_filter = 1
rotation = 1.5708
texture = ExtResource("3_u1jc7")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_3e8mx")

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 2
position = Vector2(11, 1)
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_caqlq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s8jga")
}
blend_times = [&"idle", &"idle", 0.5, &"idle", &"gathering", 0.5, &"idle", &"move", 0.5, &"gathering", &"idle", 0.5, &"gathering", &"gathering", 0.5, &"gathering", &"move", 0.5, &"move", &"idle", 1.0, &"move", &"gathering", 0.5, &"move", &"move", 0.5]

[node name="ToolManager" type="Node2D" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_yvhg5")
hand = NodePath("../RightHand")
axe = ExtResource("9_5bi5l")
pick = ExtResource("10_mdbs7")

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("11_vvgyi")

[node name="idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_u1ykg")

[node name="walk" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_o420w")

[node name="gather" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_748to")

[node name="swing" type="Node" parent="PlayerStateMachine"]
script = ExtResource("15_8sypp")

[node name="change_item" type="Node" parent="PlayerStateMachine"]
script = ExtResource("16_rml2b")
